// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils createArrayWithChildren should add props to a property 1`] = `"['bo']"`;

exports[`utils createEmptyArrayProperty should create an array with no properties 1`] = `"its-lit: []"`;

exports[`utils createExternalRegExp should create an regExp property that has been parsed by jscodeshift 1`] = `"\\"\\\\t\\""`;

exports[`utils createIdentifierOrLiteral should create basic literal 1`] = `"'stringLiteral'"`;

exports[`utils createIdentifierOrLiteral should create boolean 1`] = `"true"`;

exports[`utils createLiteral should create basic literal 1`] = `"\\"stringLiteral\\""`;

exports[`utils createLiteral should create boolean 1`] = `"true"`;

exports[`utils createOrUpdatePluginByName should add an object as an argument 1`] = `
"[new Plugin({
  foo: true
})]"
`;

exports[`utils createOrUpdatePluginByName should create a new plugin with arguments 1`] = `
"{ plugins: [new Plugin({
  foo: \\"bar\\"
})] }"
`;

exports[`utils createOrUpdatePluginByName should create a new plugin without arguments 1`] = `"{ plugins: [new Plugin()] }"`;

exports[`utils createOrUpdatePluginByName should merge options objects 1`] = `
"[new Plugin({
  foo: true,
  bar: \\"baz\\",
  foo: false,
  baz-long: true
})]"
`;

exports[`utils createProperty should create properties for Boolean 1`] = `
"{
    foo: true
}"
`;

exports[`utils createProperty should create properties for Number 1`] = `
"{
    foo: -1
}"
`;

exports[`utils createProperty should create properties for String 1`] = `
"{
    foo: \\"bar\\"
}"
`;

exports[`utils createProperty should create properties for complex keys 1`] = `
"{
    foo-bar: \\"bar\\"
}"
`;

exports[`utils createProperty should create properties for non-literal keys 1`] = `
"{
    1: \\"bar\\"
}"
`;

exports[`utils getRequire should create a require statement 1`] = `"const filesys = require(\\"fs\\");"`;

exports[`utils pushObjectKeys should push object to an node using Object.keys 1`] = `
"module.exports = {
				pushMe: {}
			}"
`;
